--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -26,7 +26,8 @@
     "mocha": "^8.3.2",
     "mongoose": "^5.11.18",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-paginate": "^7.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
